Bug 220343 - Kile process lingering after deliberate (graphical) close. Crash message five minutes after closing Kile. [QTabWidget::currentWidget, KileView::Manager::currentTextView, KileInfo::activeTextDocument]
Summary: Kile process lingering after deliberate (graphical) close. Crash message five...
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
: 202885 221966 222342 222592 223524 223759 224248 224290 224550 225173 227650 229899 231182 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-28 07:05 UTC by Paul Wragg
Modified: 2010-04-19 18:13 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
crashlog as generated by abrt (27.32 KB, text/plain)
2010-01-28 18:56 UTC, Felix Möller
Details
crash when attached with gdb (3.47 KB, text/plain)
2010-01-28 23:41 UTC, Felix Möller
Details
debug output (136.54 KB, text/plain)
2010-01-29 17:18 UTC, Felix Möller
Details
Force termination of Kile when the main window is closed. (522 bytes, patch)
2010-01-31 23:54 UTC, Michel Ludwig
Details
New crash information added by DrKonqi (4.26 KB, text/plain)
2010-04-19 18:05 UTC, chaz1011
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Wragg 2009-12-28 07:05:54 UTC
Application that crashed: kile
Version of the application: 2.0.84
KDE Version: 4.3.1 (KDE 4.3.1) "release 6"
Qt Version: 4.5.3
Operating System: Linux 2.6.31.5-0.1-desktop i686
Distribution: "openSUSE 11.2 (i586)"

What I was doing when the application crashed:
Had finished work on my document and close all programs.  No error messages.  Checked output of ps aux | grep kile and saw my Kile process was still there.  No action taken.  Five minutes after apparently closing kile the KCrash handler appeared and hence this report.

Tell me to stop reporting if this is getting too much or you have enough information! :-)

 -- Backtrace:
Application: Kile (kile), signal: Segmentation fault
[KCrash Handler]
#6  0xb5d0a6c6 in QTabWidget::currentWidget (this=0x8594fa8) at widgets/qtabwidget.cpp:613
#7  0x081fdcf2 in KileView::Manager::currentTextView (this=0x83eabc8) at /home/paul/Download/software/kile/kile-2.1b3/src/kileviewmanager.cpp:279
#8  0x0814e92f in KileInfo::activeTextDocument (this=0xbff83134) at /home/paul/Download/software/kile/kile-2.1b3/src/kileinfo.cpp:99
#9  0x081e9ae0 in KileDocument::Manager::getInfo (this=0x83ef390) at /home/paul/Download/software/kile/kile-2.1b3/src/kiledocmanager.cpp:172
#10 0x081fdf83 in KileView::Manager::updateStructure (this=0x83eabc8, parse=false, docinfo=0x0) at /home/paul/Download/software/kile/kile-2.1b3/src/kileviewmanager.cpp:342
#11 0x081ffd28 in KileView::Manager::qt_metacall (this=0x83eabc8, _c=InvokeMetaMethod, _id=14, _a=0xbff826c4) at /home/paul/Download/software/kile/kile-build/src/kileviewmanager.moc:138
#12 0xb6281864 in QMetaObject::activate (sender=0x83ef390, from_signal_index=7, to_signal_index=7, argv=0xbff826c4) at kernel/qobject.cpp:3113
#13 0xb6282585 in QMetaObject::activate (sender=0x83ef390, m=0x82c222c, local_signal_index=3, argv=0xbff826c4) at kernel/qobject.cpp:3187
#14 0x081fa65d in KileDocument::Manager::updateStructure (this=0x83ef390, _t1=false, _t2=0x0) at /home/paul/Download/software/kile/kile-build/src/kiledocmanager.moc:372
#15 0x081f01fd in KileDocument::Manager::fileSaveAll (this=0x83ef390, amAutoSaving=true, disUntitled=false) at /home/paul/Download/software/kile/kile-2.1b3/src/kiledocmanager.cpp:880
#16 0x0810ed2c in Kile::autoSaveAll (this=0xbff83128) at /home/paul/Download/software/kile/kile-2.1b3/src/kile.cpp:1351
#17 0x0811dd8b in Kile::qt_metacall (this=0xbff83128, _c=InvokeMetaMethod, _id=76, _a=0xbff8295c) at /home/paul/Download/software/kile/kile-build/src/kile.moc:300
#18 0xb6281864 in QMetaObject::activate (sender=0x8373cf0, from_signal_index=4, to_signal_index=4, argv=0x0) at kernel/qobject.cpp:3113
#19 0xb6282585 in QMetaObject::activate (sender=0x8373cf0, m=0xb635e904, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3187
#20 0xb62bd715 in QTimer::timeout (this=0x8373cf0) at .moc/release-shared/moc_qtimer.cpp:128
#21 0xb6287196 in QTimer::timerEvent (this=0x8373cf0, e=0xbff82de4) at kernel/qtimer.cpp:261
#22 0xb627b51b in QObject::event (this=0x8373cf0, e=0xbff82de4) at kernel/qobject.cpp:1075
#23 0xb58968fc in QApplicationPrivate::notify_helper (this=0x8374758, receiver=0x8373cf0, e=0xbff82de4) at kernel/qapplication.cpp:4065
#24 0xb589e34e in QApplication::notify (this=0xbff83128, receiver=0x8373cf0, e=0xbff82de4) at kernel/qapplication.cpp:3605
#25 0xb6868ce1 in KApplication::notify (this=0xbff83128, receiver=0x8373cf0, event=0xbff82de4) at /usr/src/debug/kdelibs-4.3.1/kdeui/kernel/kapplication.cpp:302
#26 0xb626b32e in QCoreApplication::notifyInternal (this=0xbff83128, receiver=0x8373cf0, event=0xbff82de4) at kernel/qcoreapplication.cpp:610
#27 0xb629a356 in sendEvent (event=<value optimized out>, receiver=<value optimized out>) at kernel/qcoreapplication.h:213
#28 QTimerInfoList::activateTimers (event=<value optimized out>, receiver=<value optimized out>) at kernel/qeventdispatcher_unix.cpp:594
#29 0xb6297325 in timerSourceDispatch (source=0x8377470) at kernel/qeventdispatcher_glib.cpp:184
#30 idleTimerSourceDispatch (source=0x8377470) at kernel/qeventdispatcher_glib.cpp:231
#31 0xb505a4c2 in g_main_dispatch (context=<value optimized out>) at gmain.c:1960
#32 IA__g_main_context_dispatch (context=<value optimized out>) at gmain.c:2513
#33 0xb505dd98 in g_main_context_iterate (context=0x8376890, block=<value optimized out>, dispatch=1, self=0x8374390) at gmain.c:2591
#34 0xb505debe in IA__g_main_context_iteration (context=0x8376890, may_block=1) at gmain.c:2654
#35 0xb6297011 in QEventDispatcherGlib::processEvents (this=0x8356f30, flags=...) at kernel/qeventdispatcher_glib.cpp:407
#36 0xb593829a in QGuiEventDispatcherGlib::processEvents (this=0x8356f30, flags=...) at kernel/qguieventdispatcher_glib.cpp:202
#37 0xb626998d in QEventLoop::processEvents (this=0xbff83094, flags=) at kernel/qeventloop.cpp:149
#38 0xb6269dd9 in QEventLoop::exec (this=0xbff83094, flags=...) at kernel/qeventloop.cpp:201
#39 0xb626c270 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#40 0xb5896774 in QApplication::exec () at kernel/qapplication.cpp:3525
#41 0x081236db in main (argc=1, argv=0xbff83754) at /home/paul/Download/software/kile/kile-2.1b3/src/main.cpp:167

This bug may be a duplicate of or related to bug 218630

Reported using DrKonqi
Comment 1 Michel Ludwig 2010-01-11 22:56:25 UTC
*** Bug 221966 has been marked as a duplicate of this bug. ***
Comment 2 Michel Ludwig 2010-01-12 16:07:18 UTC
*** Bug 222342 has been marked as a duplicate of this bug. ***
Comment 3 Michel Ludwig 2010-01-13 22:57:24 UTC
*** Bug 222592 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2010-01-20 14:21:58 UTC
*** Bug 223524 has been marked as a duplicate of this bug. ***
Comment 5 Michel Ludwig 2010-01-22 10:26:41 UTC
From 223759:

The crash can be found at https://bugzilla.redhat.com/attachment.cgi?id=385918
Comment 6 Michel Ludwig 2010-01-22 10:27:16 UTC
*** Bug 223759 has been marked as a duplicate of this bug. ***
Comment 7 Michel Ludwig 2010-01-24 15:55:29 UTC
Ok, this is a very mysterious issue. All attempts at reproducing this have failed so far here.

Can someone please compile/run Kile with debug output enabled and post here what is being printed when Kile is closed?
Comment 8 Felix Möller 2010-01-24 19:34:38 UTC
The last time it happened I had the following output:
[fm@thinkpad ~]$ kile /home/fm/scm/sap-case_study-frutado.tex
Object::connect: No such slot KileDocument::LaTeXInfo::activateDefaultHightlightMode()
Undecodable sequence: \001b(hex)[?1034h
Object::connect: No such slot KileDocument::LaTeXInfo::activateDefaultHightlightMode()
Speicherzugriffsfehler (Speicherabzug geschrieben)

right now I am rebuilding the RPM with the following patch:
=== modified file 'kile.spec'
--- kile.spec	2010-01-24 18:29:35 +0000
+++ kile.spec	2010-01-24 18:30:23 +0000
@@ -67,7 +67,7 @@
 
 mkdir -p %{_target_platform}
 pushd %{_target_platform}
-%{cmake_kde4} \
+%{cmake_kde4} -DCMAKE_BUILD_TYPE="Debug" \
   ..
 popd
 

Is this all that is needed?
Comment 9 Michel Ludwig 2010-01-24 21:51:04 UTC
(In reply to comment #8)
>  mkdir -p %{_target_platform}
>  pushd %{_target_platform}
> -%{cmake_kde4} \
> +%{cmake_kde4} -DCMAKE_BUILD_TYPE="Debug" \
>    ..
>  popd
> 
> 
> Is this all that is needed?

Yes, that should be enough.
Comment 10 Dario Andres 2010-01-27 03:27:05 UTC
*** Bug 224290 has been marked as a duplicate of this bug. ***
Comment 11 Felix Möller 2010-01-28 18:56:11 UTC
Created attachment 40318 [details]
crashlog as generated by abrt

The crashed happened on me again today. Sadly I had the konsole i started it from already closed. It allways just crashes minutes after closing ...

It somehow seems that reproducing the crash is more difficult with my self compiled version than with the stock Fedora package although I just rebuild the src.rpm?

Furthermore exam time is coming here and therefore I do not have to write that much anymore... So maybe it would help if others compile their debug version too...
Comment 12 Felix Möller 2010-01-28 23:41:10 UTC
Created attachment 40329 [details]
crash when attached with gdb

This time i regocnized that the kile process was still running after closing and could attach with gdb. See attached file.

Here is what I did, although not reproducible yet I think.

I started kile. Put it in the background via CTRL-Z.
Looked a little at my repo doing svn st and finally a svn ci.
In between I ran pdflatex.

When the process was still running I attached with gdb -p.
Comment 13 Michel Ludwig 2010-01-28 23:53:56 UTC
Thanks. But it would also be interesting to see the output that Kile prints when it is closed but doesn't terminate, i.e. Kile should be started from a terminal and when it is closed but doesn't terminate properly, the terminal won't return to the command prompt.

It would be most interesting to see the last messages that Kile prints there. :-)
Comment 14 Felix Möller 2010-01-28 23:59:20 UTC
It does not output anything more than:
[fm@thinkpad assignment03]$ kile assignment03.tex
Object::connect: No such slot KileDocument::LaTeXInfo::activateDefaultHightlightMode() in /home/fm/rpmbuild/BUILD/kile-2.1b3/src/documentinfo.cpp:464
Undecodable sequence: \001b(hex)[?1034h

maybe I need to change something to get more debugging output?
Comment 15 Felix Möller 2010-01-29 17:18:04 UTC
Created attachment 40353 [details]
debug output

I had some private mail discussion with Michel and here is now the whole debug output kile.

Hope this helps.
Comment 16 Michel Ludwig 2010-01-31 23:14:39 UTC
*** Bug 224248 has been marked as a duplicate of this bug. ***
Comment 17 Michel Ludwig 2010-01-31 23:54:15 UTC
Created attachment 40425 [details]
Force termination of Kile when the main window is closed.

Can someone please try out this patch and check whether it helps? Thanks.
Comment 18 Michel Ludwig 2010-02-01 09:17:25 UTC
*** Bug 224550 has been marked as a duplicate of this bug. ***
Comment 19 Felix Möller 2010-02-01 23:12:01 UTC
I think the patch attached in comment #17 fixes the problem.
Comment 20 Dario Andres 2010-02-04 03:01:54 UTC
*** Bug 225173 has been marked as a duplicate of this bug. ***
Comment 21 Michel Ludwig 2010-02-05 10:20:09 UTC
Fixed in revision 1085429.
Comment 22 Michel Ludwig 2010-02-07 14:13:07 UTC
*** Bug 202885 has been marked as a duplicate of this bug. ***
Comment 23 Dario Andres 2010-03-19 14:17:18 UTC
*** Bug 229899 has been marked as a duplicate of this bug. ***
Comment 24 Dario Andres 2010-03-19 14:17:26 UTC
*** Bug 227650 has been marked as a duplicate of this bug. ***
Comment 25 Dario Andres 2010-03-19 14:17:42 UTC
*** Bug 231182 has been marked as a duplicate of this bug. ***
Comment 26 chaz1011 2010-04-19 18:05:53 UTC
Created attachment 42900 [details]
New crash information added by DrKonqi

Crashed a few minutes after exit when away from the machine.
Comment 27 Kevin Kofler 2010-04-19 18:13:21 UTC
This bug is already fixed, complain to your distro for shipping obsolete buggy crap.