Force termination of Kile when the main window is closed. Under some circumstances (Qt 4.5.3 or KDE 4.3 issues (?)) Kile doesn't terminate when the main window is closed. Everything seems to work fine with Qt 4.6.

BUG: 220343